--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
+
 {
-3    "name": "RomeoBot",
-4    "version": "1.0.0",
-5    "description": "rj-romeo",
-6    "scripts": {
-7        "build": "echo \"No build specified\" && exit 1",
-8        "test": "echo \"No test specified\" && exit 1",
-9        "start": "node index.js"
-10    },
-11    "repository": {
-12        "type": "git",
-13        "url": "git+https://github.com/Rj-sgshsb/RomeoBot.git"
-14    },
-15    "author": "",
-16    "license": "ISC",
-17    "bugs": {
-18        "url": "https://github.com/Rj-sgshsb/RomeoBot/issues"
-19    },
-20    "homepage": "https://github.com/Rj-sgshsb/RomeoBot#readme"
-21}
-22 
+    "name": "RomeoBot",
+    "version": "1.0.0",
+    "description": "rj-romeo",
+    "scripts": {
+        "build": "echo \"No build specified\" && exit 1",
+        "test": "echo \"No test specified\" && exit 1",
+        "start": "node index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Rj-sgshsb/RomeoBot.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Rj-sgshsb/RomeoBot/issues"
+    },
+    "homepage": "https://github.com/Rj-sgshsb/RomeoBot#readme"
+}
+
