--- a/package.json
+++ b/package.json
@@ -1,22 +1,5 @@
-
 {
-    "name": "RomeoBot",
-    "version": "1.0.0",
-    "description": "rj-romeo",
-    "scripts": {
-        "build": "echo \"No build specified\" && exit 1",
-        "test": "echo \"No test specified\" && exit 1",
-        "start": "node index.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Rj-sgshsb/RomeoBot.git"
-    },
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/Rj-sgshsb/RomeoBot/issues"
-    },
-    "homepage": "https://github.com/Rj-sgshsb/RomeoBot#readme"
+  "engines": {
+    "node": ">=16.0"
+  }
 }
-
